tests/snapshots/ui__example_var.snap
---
source: tests/ui.rs
expression: file_contents
---
// Test 1: Variable assignment

int alice, bob, charlie;
bool zeta;

void main() {
    alice = 1;
    bob = 2;
    charlie = 3;
    zeta = false;
}

