tests/snapshots/ui__missing_trailing_semi_colon.snap
---
source: tests/ui.rs
expression: "test_sushi(\"1 + 1 * 2 + 3 / (5 - 3)\").unwrap()"
---
### stdout ###
[EMPTY]
### stderr ###
Error: Failed to parse
   ╭─[<unknown>:1:13]
   │
 1 │ 1 + 1 * 2 + 3 / (5 - 3)
   ·                        ┬  
   ·                        ╰── Unexpected EOF
   · 
   · Note: Add a `;` at the end of the line.
───╯

